--- a/pom.xml
+++ b/pom.xml
@@ -8,12 +8,12 @@
         <version>2.2.10.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.kiwoom</groupId>
+    <groupId>org.greenearth</groupId>
     <artifactId>administrator</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>war</packaging>
     <name>administrator</name>
-    <description>Kiwoom Administrator project for Spring Boot</description>
+    <description>Administrator project for Spring Boot</description>
 
     <properties>
         <java.version>1.8</java.version>
