Servlet 3.0 이상에서 발생하는 현상(Multipart.transTo())에 대한 해결 방법

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,13 @@
 spring.profiles.active=local
 
+# Multipart 의 location 를 설정해 주는 이유
+# Servlet3.0 이상에서 Multipart.transTo()를 실행시켜 파일을 전송할 경우, 절대경로를 허용하지 않는다.
+# Tomcat 의 경우 절대경로를 허용하지만, 타 was 의 경우 servlet 의 기본 설정을 따르기 때문에 was 의 servletContext 의 tmp 경로에
+# 파일을 전송하게 되는 현상이 발송한다. 아래와 같이 spring.servlet.multipart.location 을 설정하면 타 was 에서도 절대경로로
+# 파일을 전송할 수 있게 된다.
+spring.servlet.multipart.location=C:\\project\\upload
+spring.servlet.multipart.max-file-size=5MB
+
 # 개발할 때에만 create-drop 또는 update를 사용하고 운영 환경에서는 validate를 사용합니다.
 #spring.jpa.hibernate.ddl-auto=create-drop
 spring.h2.console.enabled=true
