Java API Encoding 으로 인한 수정(UTF-8 > ISO-8859-1)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,20 @@
 spring.profiles.active=local
 
-# Multipart 의 location 를 설정해 주는 이유
-# Servlet3.0 이상에서 Multipart.transTo()를 실행시켜 파일을 전송할 경우, 절대경로를 허용하지 않는다.
-# Tomcat 의 경우 절대경로를 허용하지만, 타 was 의 경우 servlet 의 기본 설정을 따르기 때문에 was 의 servletContext 의 tmp 경로에
-# 파일을 전송하게 되는 현상이 발송한다. 아래와 같이 spring.servlet.multipart.location 을 설정하면 타 was 에서도 절대경로로
-# 파일을 전송할 수 있게 된다.
+# Multipart \uC758 location \uB97C \uC124\uC815\uD574 \uC8FC\uB294 \uC774\uC720
+# Servlet3.0 \uC774\uC0C1\uC5D0\uC11C Multipart.transTo()\uB97C \uC2E4\uD589\uC2DC\uCF1C \uD30C\uC77C\uC744 \uC804\uC1A1\uD560 \uACBD\uC6B0, \uC808\uB300\uACBD\uB85C\uB97C \uD5C8\uC6A9\uD558\uC9C0 \uC54A\uB294\uB2E4.
+# Tomcat \uC758 \uACBD\uC6B0 \uC808\uB300\uACBD\uB85C\uB97C \uD5C8\uC6A9\uD558\uC9C0\uB9CC, \uD0C0 was \uC758 \uACBD\uC6B0 servlet \uC758 \uAE30\uBCF8 \uC124\uC815\uC744 \uB530\uB974\uAE30 \uB54C\uBB38\uC5D0 was \uC758 servletContext \uC758 tmp \uACBD\uB85C\uC5D0
+# \uD30C\uC77C\uC744 \uC804\uC1A1\uD558\uAC8C \uB418\uB294 \uD604\uC0C1\uC774 \uBC1C\uC1A1\uD55C\uB2E4. \uC544\uB798\uC640 \uAC19\uC774 spring.servlet.multipart.location \uC744 \uC124\uC815\uD558\uBA74 \uD0C0 was \uC5D0\uC11C\uB3C4 \uC808\uB300\uACBD\uB85C\uB85C
+# \uD30C\uC77C\uC744 \uC804\uC1A1\uD560 \uC218 \uC788\uAC8C \uB41C\uB2E4.
 spring.servlet.multipart.location=C:\\project\\upload
 spring.servlet.multipart.max-file-size=5MB
 
-# 개발할 때에만 create-drop 또는 update를 사용하고 운영 환경에서는 validate를 사용합니다.
+# \uAC1C\uBC1C\uD560 \uB54C\uC5D0\uB9CC create-drop \uB610\uB294 update\uB97C \uC0AC\uC6A9\uD558\uACE0 \uC6B4\uC601 \uD658\uACBD\uC5D0\uC11C\uB294 validate\uB97C \uC0AC\uC6A9\uD569\uB2C8\uB2E4.
 #spring.jpa.hibernate.ddl-auto=create-drop
 spring.h2.console.enabled=true
 
 mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 
-# 개발시 SQL 로깅을 하여 어떤 값으로 어떤 SQL이 실행되는지 확인합니다.
+# \uAC1C\uBC1C\uC2DC SQL \uB85C\uAE45\uC744 \uD558\uC5EC \uC5B4\uB5A4 \uAC12\uC73C\uB85C \uC5B4\uB5A4 SQL\uC774 \uC2E4\uD589\uB418\uB294\uC9C0 \uD655\uC778\uD569\uB2C8\uB2E4.
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
