--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-logging.level.org.greenearth.administrator.sample.mapper=DEBUG
+logging.level.org.greenearth.administrator.sample.mapper=DEBUkm km m m m m m m m m m m m m m m m m m m m m m m m m m m m m m m m m m m m m m m m m m m m m lklk cvbdfgnp/;?G
 
 pagehelper.helper-dialect=oracle
 pagehelper.reasonable=true
